beta/binary.css
.world
{
	position:absolute;
    top: calc(50% - 0px);
    left: calc(50% - 5px);
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
}

.world-container
{
	width: 100%;
	height: 100%;
}
html,body 
{
    position:relative;
	overflow:hidden;
    height: 100%;
    font-size: 30px;
}
.left-sea 
{
	position: absolute;
	font-family: courier;
	height: 100%;
}

.loc-marker{
	color: white;
}
.right-sea
{
	position: absolute;
	font-family: courier;
	height: 100%;
}

.words, .title
{
    color: black;
    font-weight: bold;
}

.land, .title-border {
    color: red;
}

@media only screen and (max-width: 1000px) and (orientation: portrait) {
    body{
        font-size: 40px;    
    }
    
    .world {
        left: calc(50% - 12px);
        top: calc(50% + 6px);
    }
}

@media only screen and (max-width: 1000px) and (orientation: landscape) {
    body{
        font-size: 25px;    
    }
}

.bottom-half, .top-half, .middle-half {
    position: relative;
    background-color: #DDD;
}

.water, .border, .sponsor-border, .about-border, .contact-border {
    color: #DCC;
}

.darker-border {
}

.shadow-top {
    box-shadow: 0px -3px 3px #000;
}

.shadow-bottom {
    box-shadow: 0px 3px 3px #000;
}

.middle-half {
    z-index: 1000;
}

.dark-bg {
    background-color: #333;
}

